group 'io.github.stekeblad'
version '0.0.0.1'

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
    }
}

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'com.google.osdetector'

sourceSets {
    main {
        resources {
            srcDirs = ["src/main/java", "src/main/resources"]
            includes = ["**/*.fxml", "**/*.png", "**/*.json", "**/*.properties", "**/*.css"]
        }
    }
}

sourceCompatibility = 1.11

ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os





repositories {
    mavenCentral()
}

dependencies {

    compile 'com.google.api-client:google-api-client:1.25.0'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.25.0'
    compile 'com.google.apis:google-api-services-youtube:v3-rev205-1.25.0'

    compile "org.openjfx:javafx-base:11:${platform}"
    compile "org.openjfx:javafx-graphics:11:${platform}"
    compile "org.openjfx:javafx-controls:11:${platform}"
    
    compile "org.openjfx:javafx-fxml:11:${platform}"
}


compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}


mainClassName = "io.github.stekeblad.videouploader.main.Main"

// https://developers.google.com/api-client-library/java/apis/youtube/v3
// https://search.maven.org/#search%7Cgav%7C1%7Cg%3A"com.google.apis"%20AND%20a%3A"google-api-services-youtube"
//
